# reactor-pattern-example

./: CMakeLists.txt  README.md  compile_commands.json
.github/workflows/: build.yml
lib/: CMakeLists.txt
lib/include/reactor/: event_handler.h  reactor.h
lib/src/reactor/: reactor.cc
src/: CMakeLists.txt  main.cc
src/IPCClient/: CMakeLists.txt
src/IPCClient/include/: IPCClient.h
src/IPCClient/src/: IPCClient.cc
src/IPCServer/: CMakeLists.txt
src/IPCServer/include/: IPCServer.h
src/IPCServer/src/: IPCServer.cc
